loro/test/invalid/fixed/bug_clase_2.loro
/**
 Inválido:
 Acceder a un atributo a través de clase cuyo nombre está CON paquete. 
*/
paquete paq;

clase MiClase
descripcion "Una clase"
 atributo : entero : "Un atributo";
fin clase

algoritmo bug_clase para PRUEBA()
estrategia ""
inicio
 obj : MiClase := crear MiClase;
 obj.atributo := 0;  // <- OK
 paq::MiClase.atributo := 0;  // <- error
fin algoritmo
